--- a/reference_files/css/dark-mode.css
+++ b/reference_files/css/dark-mode.css
@@ -18,4 +18,6 @@
 
   --toggle-position: 100px;
   --toggle-color: #a6a6a6;
+
+  --category-color: #b19cff;
 }
