--- a/reference_files/css/light-mode.css
+++ b/reference_files/css/light-mode.css
@@ -18,4 +18,6 @@
 
   --toggle-position: 0;
   --toggle-color: grey;
+
+  --category-color: #582cfc;
 }
